# ldgv

./: .gitignore  ChangeLog.md  Dockerfile  LICENSE  OVERVIEW.md  README-networking-communication-example.md  README-networking.md  README.md  TODO  TODO.md  cabal-ghcjs.project  default.nix  index.html  ld-session-code.cabal  ldgv.cabal  main.css  newsyntax.txt  package.yaml  stack.yaml  syntax.txt  testAdd.sh  testBidirectional.sh  testBidirhandoff.sh  testHandoff.sh  testHandoff2.sh  testLDGVTests.sh  testNW.sh  testNWCount.sh  testNWCountHigh.sh  testNWOld.sh  testOftenBidirhandoff.sh  testOftenHandoff3.sh  testOftenHandoff4.sh  testOftenHandoff5.sh  testOftenHandoff6.sh  testOftenHandoff7.sh  testOftenRecursion.sh  testRecursion.sh  testSimple.sh  updater  (+1 more)
app/: Main.hs
browser/: BrowserOut.hs  Main.hs
browser-support/: README.md  index.html  update.sh
browser-support/static/: main.css
c-support/runtime/: LDST.c  LDST.h  LDST_concurrent.c  LDST_debug.h  LDST_serial.c  thpool.c
dev-examples/: client.ldgvnw  server.ldgvnw
dev-examples/add/: client.ldgvnw  server.ldgvnw  test.ldgvnw
dev-examples/bidirectional/: client.ldgvnw  server.ldgvnw
dev-examples/bidirhandoff/: BugsAssociatedWithThisTest  client.ldgvnw  clienthandoff.ldgvnw  server.ldgvnw  serverhandoff.ldgvnw
dev-examples/bidirhandoffWithEnd/: client.ldgvnw  clienthandoff.ldgvnw  server.ldgvnw
dev-examples/handoff/: client.ldgvnw  handoff.ldgvnw  server.ldgvnw
dev-examples/handoff2/: client.ldgvnw  handoff.ldgvnw  notes  server.ldgvnw
dev-examples/handoff2/problem/: client  handoff  server
dev-examples/handoff4/: server.ldgvnw
dev-examples/handoff5/: add.ldgvnw
dev-examples/handoff6/: client.ldgvnw  handoff.ldgvnw  server.ldgvnw
dev-examples/handoff7/: handoff.ldgvnw
dev-examples/recursion/: client.ldgvnw  server.ldgv
dev-examples/simple/: client.ldgvnw  server.ldgvnw
examples/: add.ldgv  case-singleton.ldgv  casesub.ldgv  casetest.ldgv  cast-bot.ldgv  cast-collide.ldgv  cast-fail.ldgv  casts.ccldgv  depcast.ccldgv  depsum.ldgv  example-inputs.txt  examples-subtyping-dynamic.out  examples-subtyping-dynamic.txt  gradualtest.ldgv  just-f2.ccldgv  just-f3.ccldgv  minimal.ccldlc  mymap.gldgv  mymap.gldlc  natsum.ldgv  natsum2-new.ldgv  natsum2-rec.ldgv  natsum2.ldgv  node.ldgv  node.out  noderec.ldgv  optionalint.gldlc  optionalint.out  person.gldgv  person.gldlc  person.out  section1.gldlc  section1.out  section2.gldlc  section2.ldlc  section2.out  simple.ldgv  simple_recursion.ldgv  tcfailure.ldgv  tclient.ldgv  (+4 more)
exe/: Main.hs  Output.hs
networking-examples/add/: client.ldgvnw
networking-examples/add2/: add.ldgvnw
networking-examples/bidirectional/: client.ldgvnw
networking-examples/bidirhandoff/: serverhandoff.ldgvnw
networking-examples/handoff/: handoff.ldgvnw  server.ldgvnw
networking-examples/handoff2/: client.ldgvnw
networking-examples/handoff3/: client.ldgvnw  handoff.ldgvnw
networking-examples/handoff4/: handoff.ldgvnw
networking-examples/handoff6/: client.ldgvnw
networking-examples/handoff7/: add.ldgvnw
networking-examples/handoff8/: add.ldgvnw  handoff.ldgvnw
networking-examples/sendString/: client.ldgvnw  server.ldgvnw
networking-examples/simple/: client.ldgvnw
networking-examples/twoCons/: client.ldgvnw  server.ldgvnw
networking-tests/: testAdd.sh  testBidirectional.sh  testBidirhandoff.sh  testHandoff.sh  testHandoff2.sh  testLDGVTests.sh  testNWCount.sh  testNWCountHigh.sh  testNWOld.sh  testOftenAdd2.sh  testOftenBidirhandoff.sh  testOftenHandoff.sh  testOftenHandoff2.sh  testOftenHandoff3.sh  testOftenHandoff4.sh  testOftenHandoff5.sh  testOftenHandoff6.sh  testOftenHandoff7.sh  testOftenHandoff8.sh  testOftenTwoCons.sh  testRecursion.sh  testSimple.sh
nix/: updater
runtime/: LDST.c  LDST.h  LDST_gc.c  LDST_serial.c
src/: Config.hs  Examples.hs  Grammar.y  Interpreter.hs  Kinds.hs  MonadOut.hs  MonadStack.hs  Parsing.hs  PrettySyntax.hs  ProcessEnvironment.hs  ProcessEnvironmentTypes.hs  SerializeValues.hs  Singletons.hs  Subtyping.hs  Syntax.hs  SyntaxDescription.hs  TCLubGlb.hs  TCSubtyping.hs  TCTyping.hs  TCXMonad.hs  Tokens.x  Typechecker.hs  Typing.hs
src/C/: CPS.hs  Compile.hs  Generate.hs  MonadStack.hs
src/Networking/: Assert.hs  Buffer.hs  Client.hs  Common.hs  DirectionalConnection.hs  Incoming.hs  Messages.hs  NetworkBuffer.hs  NetworkConnection.hs  Outgoing.hs  RandomID.hs  Serialize.hs  Server.hs  Tests.hs  ThingsToLookInto.txt  UserID.hs
src/Networking/NetworkingMethod/: Fast.hs  NetworkingMethodCommon.hs  Stateless.hs
src/Parsing/: Grammar.y  Tokens.x
src/Syntax/: CPS.hs  Pretty.hs
src/ValueParsing/: ValueGrammar.y  ValueTokens.x
static/: all.js
test/: ArithmeticSpec.hs  BufferSpec.hs  CSpec.hs  CcldlcSpec.hs  FunctionApplicationSpec.hs  FunctionSignaturesSpec.hs  InterpreterSpec.hs  LdlcSpec.hs  NetworkBufferSpec.hs  SerializeSpec.hs  Spec.hs  TypecheckerSpec.hs  Utils.hs  UtilsFuncCcldlc.hs
test/inputs/: case1.ldgv  case2.ldgv
