cabal-version:       >=1.10
name:                ldgv
version:             0.0.1
synopsis: "A webbased interpreter for ldgv code"
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Nils Hagner (Interpreter), (Typechecker by Peter Thiemann)
maintainer:          nilshagner@tutanota.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , src/Tokens.x
                   , src/Grammar.y

library 
  hs-source-dirs: src
  exposed-modules: Interpreter
                 , Typechecker
                 , Config
                 , Examples
                 , ProcessEnvironment
  other-modules: Tokens
               , Grammar
               , Kinds
               , Subtyping
               , Syntax
               , TCSubtyping
               , TCTyping
               , TCXMonad
               , Typing
  build-tools: alex, happy
  build-depends: base
               , array
               , containers
               , lens
               , jsaddle
               , reflex
               , reflex-dom
               , text
               , mtl
               , prettyprinter
  default-language: Haskell2010

test-suite ldgv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
                , src
  other-modules: Syntax
               , Grammar
               , Tokens
               , Kinds
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  build-depends: base >=4.12 && <4.13
               , array
               , hspec
               , QuickCheck
  default-language: Haskell2010


executable ldgv-exe
  main-is:             Main.hs
  build-tools: alex, happy
  build-depends: base >=4.12 && <4.13
               , ldgv
               , array
               , containers
               , lens
               , jsaddle
               , reflex
               , reflex-dom
               , text
               , mtl
  hs-source-dirs: app
  default-language:    Haskell2010
  ghc-options: -Wall
  if impl(ghcjs)
    ghc-options: -dedupe -Wall
