cabal-version:       >=1.10
name:                ldgv
version:             0.0.1
synopsis: "A webbased interpreter for ldgv code"
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Nils Hagner (Interpreter), Janek Spaderna (C backend), Peter Thiemann (Typechecker)
maintainer:          nilshagner@tutanota.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , src/Tokens.x
                   , src/Grammar.y

library
  hs-source-dirs: src
  exposed-modules: Config
                 , Examples
                 , Grammar
                 , Interpreter
                 , Kinds
                 , Parsing
                 , ProcessEnvironment
                 , Syntax
                 , Target.C
                 , Tokens
                 , Typechecker
  other-modules: Subtyping
               , Singletons
               , Syntax.Pretty
               , TCSubtyping
               , TCTyping
               , TCXMonad
               , Typing
               , Paths_ldgv
  build-tools: alex, happy
  build-depends: base
               , array
               , bytestring
               , containers
               , file-embed
               , foldl
               , lens
               , mtl
               , prettyprinter
               , text
               , transformers
               , validation-selective
  default-language: Haskell2010

test-suite ldgv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: ArithmeticSpec
               , FunctionApplicationSpec
               , FunctionSignaturesSpec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  build-tools: alex, happy
  build-depends: base >=4.12 && <5
               , ldgv
               , array
               , hspec
               , QuickCheck
               , containers
  default-language: Haskell2010


executable ldgv-exe
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends: base >=4.12 && < 5
               , ldgv
               , bytestring
               , optparse-applicative
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints
  if impl(ghcjs)
    buildable: False


executable ldgv-browser
  main-is: Main.hs
  other-modules: SyntaxDescription
  hs-source-dirs: browser
  build-tools: alex, happy
  build-depends: base >=4.12 && <4.13
               , ldgv
               , array
               , containers
               , lens
               , jsaddle
               , reflex
               , reflex-dom
               , text
  default-language: Haskell2010
  if impl(ghcjs)
    ghc-options: -dedupe -Wall
  if !impl(ghcjs)
    buildable: False
