cabal-version:       2.0
name:                ldgv
version:             0.0.1
synopsis: "A webbased interpreter for ldgv code"
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Nils Hagner (Interpreter), Janek Spaderna (C backend), Peter Thiemann (Typechecker)
maintainer:          nilshagner@tutanota.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , src/Tokens.x
                   , src/Grammar.y

data-files: c-support/runtime/LDST.h
          , c-support/runtime/LDST_debug.h
          , c-support/runtime/LDST.c
          , c-support/runtime/LDST_serial.c
          , c-support/runtime/LDST_concurrent.c
          , c-support/runtime/thpool.h
          , c-support/runtime/thpool.c

library
  hs-source-dirs: src
  exposed-modules: C.Compile
                 , C.Generate
                 , Config
                 , Examples
                 , Grammar
                 , Interpreter
                 , Kinds
                 , Parsing
                 , ProcessEnvironment
                 , Syntax
                 , Syntax.CPS
                 , Tokens
                 , Typechecker
  other-modules: Subtyping
               , Syntax.Pretty
               , TCSubtyping
               , TCTyping
               , TCXMonad
               , Typing
               , Paths_ldgv
  build-tool-depends: alex:alex, happy:happy
  build-depends: base
               , array
               , bytestring
               , containers
               , file-embed
               , filepath
               , lens
               , mtl
               , prettyprinter
               , text
               , transformers
               , typed-process
               , validation-selective
  default-language: Haskell2010

test-suite ldgv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: ArithmeticSpec
               , CSpec
               , FunctionApplicationSpec
               , FunctionSignaturesSpec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  build-depends: base >=4.12 && <5
               , ldgv
               , QuickCheck
               , array
               , bytestring
               , containers
               , filepath
               , hspec
               , mtl
               , text
               , typed-process
               , unliftio
  default-language: Haskell2010


executable ldgv-exe
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends: base >=4.12 && < 5
               , ldgv
               , bytestring
               , optparse-applicative
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints
    -rtsopts
  if impl(ghcjs)
    buildable: False


executable ldgv-browser
  main-is: Main.hs
  other-modules: SyntaxDescription
  hs-source-dirs: browser
  build-depends: base >=4.12 && <4.13
               , ldgv
               , array
               , containers
               , lens
               , jsaddle
               , reflex
               , reflex-dom
               , text
  default-language: Haskell2010
  if impl(ghcjs)
    ghc-options: -dedupe -Wall
  if !impl(ghcjs)
    buildable: False
